--- a/.github/workflows/comment_plan.yaml
+++ b/.github/workflows/comment_plan.yaml
@@ -50,12 +50,26 @@ jobs:
           terraform plan -json > plan.json
         working-directory: ./envs/dev/souvenirConsultApp/ # Terraformのルートモジュールディレクトリを指定
 
-      # Plan結果をパースして差分形式でコメント (別ファイルで定義したスクリプトを実行)
-      - name: Add Formatted Plan comment to PR
+      # Planの結果を整形してハイライト可能なdiff形式に変換
+      - name: Reformat Plan
+        run: |
+          echo '${{ steps.plan.outputs.stdout || steps.plan.outputs.stderr }}' \
+          | sed -E 's/^([[:space:]]+)([-+])/\2\1/g' > plan.txt
+
+      # Planの内容を環境変数に入れる
+      - name: Put Plan in Env Var
+        run: |
+          PLAN=$(cat plan.txt)
+          echo "PLAN<<EOF" >> $GITHUB_ENV
+          echo "$PLAN" >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
+
+      # PRコメントにPlanの結果を投稿
+      - name: Read Plan and Post Comment
         uses: actions/github-script@v7
+        if: github.event_name == 'pull_request'
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          # 別ファイルに分けたスクリプトを指定
           script: |
             // 1. Retrieve existing bot comments for the PR
             const { data: comments } = await github.rest.issues.listComments({
@@ -66,31 +80,31 @@ jobs:
             const botComment = comments.find(comment => {
               return comment.user.type === 'Bot' && comment.body.includes('Terraform Format and Style')
             })
-            
+
             // 2. Prepare format of the comment
             const output = `#### Terraform Format and Style 🖌\`${{ steps.fmt.outcome }}\`
             #### Terraform Initialization ⚙️\`${{ steps.init.outcome }}\`
             #### Terraform Validation 🤖\`${{ steps.validate.outcome }}\`
             <details><summary>Validation Output</summary>
-            
+
             \`\`\`terraform
             ${{ steps.validate.outputs.stdout }}
             \`\`\`
-            
+
             </details>
-            
+
             #### Terraform Plan 📖\`${{ steps.plan.outcome }}\`
-            
+
             <details><summary>Show Plan</summary>
-            
+
             \`\`\`diff
             ${{ env.PLAN }}
             \`\`\`
-            
+
             </details>
-            
+
             *Pusher: @${{ github.actor }}, Working Directory: \`${{ matrix.directory }}\``;
-            
+
             // 3. If we have a comment, update it, otherwise create a new one
             if (botComment) {
               await github.rest.issues.updateComment({
@@ -107,4 +121,4 @@ jobs:
                 body: output
               })
             }
-          
+
