--- a/.github/workflows/comment_plan.yaml
+++ b/.github/workflows/comment_plan.yaml
@@ -1,4 +1,4 @@
-name: Terraform Comment Plan
+name: Terraform Plan (Comment Trigger) # ワークフロー名をコメント用と明確にする
 
 on:
   # Pull Requestのコメントが作成されたときにトリガー
@@ -12,15 +12,16 @@ jobs:
     name: Plan on Comment
     runs-on: ubuntu-latest
     # コメントトリガーで、コメント内容が"plan"で、それがPRに対するコメントの場合に実行
+    # トップレベルのonでissue_commentのみを指定したので、ここではコメント内容とPRに対するコメントかのチェックのみでOK
     if: contains(github.event.comment.body, 'plan') && github.event.issue.pull_request
     permissions:
-      pull-requests: write
+      pull-requests: write # PRにコメントするために必要
       contents: read
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.event.issue.pull_request.head.ref }}
+          ref: ${{ github.event.issue.pull_request.head.ref }} # PRのHEADをチェックアウト
           repository: ${{ github.event.issue.pull_request.head.repo.full_name }}
 
       - name: Configure AWS Credentials
@@ -35,38 +36,65 @@ jobs:
         with:
           terraform_version: latest
 
+      # Terraform Init と Plan
       - name: Terraform Init and Plan
         run: |
           terraform init -backend=true -reconfigure
-          terraform plan -no-color | tee plan.txt # 出力をファイルに保存して色を消す
-        working-directory: ./envs/dev/souvenirConsultApp/
+          # Plan結果を標準出力に出力し、ファイルに保存
+          terraform plan > plan.txt
+        working-directory: ./envs/dev/souvenirConsultApp/ # Terraformのルートモジュールディレクトリを指定
 
-      - name: Add Plan comment to PR
+      # Planの内容を環境変数に入れる
+      - name: Put Plan in Env Var
+        run: |
+          PLAN=$(cat plan.txt)
+          echo "PLAN<<EOF" >> $GITHUB_ENV
+          echo "$PLAN" >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
+
+      # PRコメントにPlanの結果を投稿
+      - name: Read Plan and Post Comment
         uses: actions/github-script@v7
+        if: github.event_name == 'pull_request'
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const fs = require('fs');
-            // ファイルパスを修正
-            const planOutput = fs.readFileSync('./envs/dev/souvenirConsultApp/plan.txt', 'utf8');
-            const pull_request_number = context.issue.number;
-            const comment = `
-            ### \`terraform plan\` Result (Triggered by comment)
+            // 1. Retrieve existing bot comments for the PR
+            const { data: comments } = await github.rest.issues.listComments({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: context.issue.number,
+            })
+            const botComment = comments.find(comment => {
+              return comment.user.type === 'Bot' && comment.body.includes('Terraform Plan Result')
+            })
 
-            <details><summary>Click to expand plan</summary>
+            // 2. Prepare format of the comment
+            const output = `
+            #### Terraform Plan 📖
+            <details><summary>Show Plan</summary>
 
-            \`\`\`hcl
-            ${planOutput}
+            \`\`\`diff
+            ${{ env.PLAN }}
             \`\`\`
 
             </details>
 
-            _Ran on commit \`${context.sha}\`_
-            `;
+            *Pusher: @${{ github.actor }}, Working Directory: \`${{ github.workspace }}/envs/dev/souvenirConsultApp\``;
 
-            await github.rest.issues.createComment({
-              issue_number: pull_request_number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: comment
-            });
+            // 3. If we have a comment, update it, otherwise create a new one
+            if (botComment) {
+              await github.rest.issues.updateComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                comment_id: botComment.id,
+                body: output
+              })
+            } else {
+              await github.rest.issues.createComment({
+                issue_number: context.issue.number,
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                body: output
+              })
+            }
