--- a/.github/workflows/comment_plan.yaml
+++ b/.github/workflows/comment_plan.yaml
@@ -49,13 +49,13 @@ jobs:
           terraform init -backend=true -reconfigure
           # Plan結果をJSON形式で出力し、ファイルに保存
           terraform plan -json > plan.json
-        working-directory: ./envs/dev/souvenirConsultApp/ # Terraformのルートモジュールディレクトリを指定
+        working-directory: ~./envs/dev/souvenirConsultApp/ # Terraformのルートモジュールディレクトリを指定
 
       # JavaScriptファイルの内容を読み込み、環境変数として設定
       - name: Read Script File
         id: read_script # このステップにIDを付与
         run: |
-          SCRIPT_CONTENT=$(cat ./scripts/format_plan_comment.js) # ファイル内容を読み込み
+          SCRIPT_CONTENT=$(cat .github/scripts/format_plan_comment.js) # ファイル内容を読み込み
           # ファイル内容を複数行の環境変数として設定
           # 環境変数名は ACTIONS_STEP_DEBUG=true でデバッグログに出力されます
           echo "SCRIPT_CONTENT<<EOF" >> $GITHUB_ENV
